[project]
name = "SimBio"
authors = [
    { name="Hernán E. Grecco", email="hernan.grecco@gmail.com" },
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = "Simulation of Biological Systems"
keywords = [
"mass actions",
"michaelis-menten",
"ode",
"compartment",
"reaction",
]
license = { file="LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "readme", "version"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hgrecco/simbio"
"Bug Tracker" = "https://github.com/hgrecco/simbio/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.isort]
profile = "black"
