[project]
name = "SimBio"
authors = [
    { name="Hernán E. Grecco", email="hernan.grecco@gmail.com" },
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = "Simulation of Biological Systems"
keywords = [
"mass action",
"michaelis menten",
"ode",
"compartment",
"reaction",
"SBML",
"poincare",
]
license = { file="LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies", "version"]
requires-python = ">=3.10"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/hgrecco/simbio"
"Bug Tracker" = "https://github.com/hgrecco/simbio/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.io = {file = "requirements.io.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}
optional-dependencies.docs = {file = "requirements.docs.txt"}

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
