[metadata]
name = SimBio
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Simulation of Biological Systems
long_description = file: README.rst
keywords = mass actions, michaelis-menten, ode, compartment, reaction
url = https://github.com/hgrecco/simbio
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = simbio
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.14
    pandas >= 1
    scipy
    orderedset
    sympy
setup_requires =
    setuptools
    setuptools_scm
test_suite = simbio.testsuite.testsuite

[options.extras_require]
test = 
    ward
    pytest
    pre-commit
    hypothesis
full =
    ward
    pytest
    hypothesis
    matplotlib
    pre-commit
    sympy

[check-manifest]
ignore =
    .pre-commit-config.yaml

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build


[isort]
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py
