[metadata]
name = SimBio
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Simulation of Biological Systems
long_description = file: README.rst
keywords = mass actions, michaelis-menten, ode, compartment, reaction
url = https://github.com/hgrecco/simbio
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = simbio
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.14
    pandas >= 1
    scipy
    orderedset
    sympy
setup_requires =
    setuptools
    setuptools_scm
test_suite = simbio.testsuite.testsuite

[options.extras_require]
dev = 
    ward
    pre-commit
    matplotlib

[check-manifest]
ignore =
    .pre-commit-config.yaml

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
max-line-length = 88
extend-ignore =
    E203  # whitespace before ':' - doesn't work well with black
    E501  # line too long - let black worry about that
per-file-ignores =
    # imported but unused
    __init__.py: F401
exclude=
    build

[zest.releaser]
python-file-with-version = version.py
